--- a/_pages/news.html
+++ b/_pages/news.html
@@ -1,10 +1,10 @@
 ---
 layout: archive
-permalink: /year-archive/
+permalink: /news/
 title: "Blog posts"
 author_profile: true
 redirect_from:
-  - /wordpress/blog-posts/
+  - /wordpress/news/
 ---
 
 {% include base_path %}
